<resources>
    <string name="app_name">familychat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool_life_help">生活助手</string>
    <string name="tool_container_calendar">日历</string>
    <string name="tool_container_weather">天气</string>
    <string name="tool_container_call">打电话</string>
    <string name="tool_container_research">搜一搜</string>
    <string name="tool_container_map">地图导航</string>
    <string name="tool_container_idcard">身份证查询</string>
    <string name="tool_container_phone">手机归属地查询</string>
    <string name="base_error_retry">重试</string>
    <string name="check_card_number">检查身份证号码是否正确</string>
</resources>
